confirmacion de algunos cambios en la rama GetEmployeeByFiltered

--- a/SalesForecaster.Presentation.API/appsettings.Development.json
+++ b/SalesForecaster.Presentation.API/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "StoreSampleDB": "Server=localhost,1434;Database=StoreSample;Persist Security Info=True;User ID=sa;Password=Password1*;MultipleActiveResultSets=true;trustServerCertificate=true"
+    "StoreSampleDB": "Data Source=DESKTOP-0LC1T7B\\SQLEXPRESS;Initial Catalog=StoreSample;Persist Security Info=True;Integrated Security=true;MultipleActiveResultSets=true;trustServerCertificate=true"
   }
 }
